# stereoimager

./: .gitignore  CMakeLists.txt  StereoImager.jucer  TROUBLESHOOTING.md  USAGE.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DSPUtils.h  MultibandProcessor.cpp  MultibandProcessor.h  StereoProcessor.cpp  StereoProcessor.h
Source/UI/: LookAndFeel.h  MeterComponents.h
background_candidates/: brazilian_tropical_green_purple_INFO.txt
